--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
-        "axios": "^1.8.2",
+        "axios": "^1.9.0",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.11",
-        "@vitejs/plugin-vue": "^5.2.4"
+        "@vitejs/plugin-vue": "^5.2.4",
+        "pinia": "^3.0.2"
     }
 }
