--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/vue3": "^2.0.11",
         "@vitejs/plugin-vue": "^5.2.4",
-        "pinia": "^3.0.2"
+        "pinia": "^3.0.2",
+        "ziggy-js": "^2.5.3"
     }
 }
