--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "@fortawesome/free-solid-svg-icons": "^6.7.2",
         "@fortawesome/vue-fontawesome": "^3.0.8",
         "@inertiajs/vue3": "^2.0.11",
+        "@primeuix/themes": "^1.1.2",
         "@vitejs/plugin-vue": "^5.2.4",
         "pinia": "^3.0.2",
+        "primevue": "^4.3.5",
         "ziggy-js": "^2.5.3"
     }
 }
