--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@primeuix/themes": "^1.1.2",
         "@vitejs/plugin-vue": "^5.2.4",
         "pinia": "^3.0.2",
+        "primeicons": "^7.0.0",
         "primevue": "^4.3.5",
         "ziggy-js": "^2.5.3"
     }
